--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.0'
     compile 'com.android.support:design:23.2.1'
     compile 'xyz.danoz:recyclerviewfastscroller:0.1.3'
+    compile 'com.google.android.gms:play-services-appindexing:8.1.0'
 }
